# BFCLabs

./: .gitignore  BF.cpp  BF.h  CMakeLists.txt
include/: boolfun.h
src/: constructors.cpp  helpers.cpp  mobiusTransform.cpp  operators.cpp  utils.cpp  variables.cpp  walshAdamar.cpp
tests/: constructorsTest.cpp  mobiusTransformTest.cpp  variablesTest.cpp  walshAdamarTest.cpp
